# iguide-hand

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  win-requirements.txt
src/: RasterInfo.py  Rasterize.py  compute_bounding_box_for_dam_catchments.py  compute_flowlines.py  dam_catchments.py  dam_hand.py  dam_inundation.py  hand_dam_workflow.py  run_rasterize.py  utils.py
